--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -9,12 +9,34 @@
 };     */
 
 .counterButton {
-    font-size:30px;
+    font-size:15px;
     background-color : #00a5ab;
     width:100px;
     margin: 10px;
-    height:50px;
+    height:30px;
     padding:5px;
     color:white;
     border-radius:25px;
 }    
+
+.counterButtonDec {
+    font-size:15px;
+    background-color : red;
+    width:100px;
+    margin: 10px;
+    height:30px;
+    padding:5px;
+    color:white;
+    border-radius:25px;
+} 
+
+.count {
+    font-size: 50px;
+    padding: 20px;
+}
+
+.totalCount {
+    font-size: 150px;
+    padding: 20px;
+    color: red
+}
