--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -40,3 +40,15 @@
     padding: 20px;
     color: red
 }
+
+.resetButton{
+    font-size:15px;
+    background-color : grey;
+    width:100px;
+    margin: 10px;
+    height:30px;
+    padding:5px;
+    color:white;
+    border-radius:25px;
+
+}
