--- a/src/components/myrokomary_app/MyRokomaryApp.css
+++ b/src/components/myrokomary_app/MyRokomaryApp.css
@@ -2,3 +2,27 @@ label, input, button {
     margin: 10px;
     padding:5px;
 }
+
+.ListBooksComponent {
+    margin: 20px;
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+}
+
+.ListBooksData , th {
+    border: 2px solid black;
+    border-collapse: collapse;
+}
+
+.ListBooksData , td {
+    border: 2px solid black;
+    border-collapse: collapse;
+}
+
+.ListBooksData > thead {
+    background-color: gray;
+    font-weight: bold;
+    text-align: center;
+    text-transform: capitalize;
+}
