--- a/src/components/myrokomary_app/MyRokomaryApp.css
+++ b/src/components/myrokomary_app/MyRokomaryApp.css
@@ -3,13 +3,20 @@ label, input, button {
     padding:5px;
 }
 
+.footer {
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 60px;
+}
+
+/* 
 .ListBooksComponent {
     margin: 20px;
     width: 100%;
     justify-content: center;
     text-align: center;
 }
-
 .ListBooksData , th {
     border: 2px solid black;
     border-collapse: collapse;
@@ -18,6 +25,7 @@ label, input, button {
 .ListBooksData , td {
     border: 2px solid black;
     border-collapse: collapse;
+    text-wrap: wrap;
 }
 
 .ListBooksData > thead {
@@ -25,4 +33,4 @@ label, input, button {
     font-weight: bold;
     text-align: center;
     text-transform: capitalize;
-}
+} */
